--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/Carburador.jfif')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Sobre Nosotros</h2>
-                        <p class="lead mb-0">Entendemos la importancia de mantener un registro preciso de todas las reparaciones y mantenimiento que tu vehículo ha experimentado a lo largo del tiempo!</p>
+                        <p class="lead mb-0">En MotoReveal, desvelamos los secretos únicos que cada moto guarda, ofreciendo a los amantes de las dos ruedas la confianza que necesitan al tomar decisiones cruciales sobre sus futuras adquisiciones. Porque cada moto tiene su propia historia, y estamos aquí para que la descubras</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/6f3da586-f143-4e16-8d3e-532b927d71e2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Lo Que Nos Distingue</h2>
                         <hr>
@@ -155,22 +155,22 @@
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/Andres.jpeg" alt="..." />
-                            <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                            <h5> Andres Agudelo</h5>
+                            <p class="font-weight-light mb-0">"Project Manager"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/Edison.jpeg" alt="..." />
-                            <h5>Fred S.</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                            <h5>Julian Rodriguez.</h5>
+                            <p class="font-weight-light mb-0">"Desarrollador"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/Osorio.jpeg" alt="..." />
-                            <h5>Sarah W.</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                            <h5>Andres Osorio.</h5>
+                            <p class="font-weight-light mb-0">"Analista"</p>
                         </div>
                     </div>
                 </div>
