--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <!-- Email address input-->
                                 <div class="row">
                                     <div class="col">
-                                        <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Placa:" data-sb-validations="required,email" />
+                                        <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email:" data-sb-validations="required,email" />
                                         <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
                                         <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
                                     </div>
@@ -140,7 +140,7 @@
                             <li>Pasión por las Motocicletas</li>
                             <li>Experiencia en Mecánica</li>
                             <li>Negociación Eficiente</li>
-                            <li>Comunidad de Motociclistas</li>
+                            <li>Comunidad de Talleres</li>
                         </ul>
                         
                     </div>
