--- a/index.html
+++ b/index.html
@@ -97,29 +97,28 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex"><i class="bi bi-search "></i></i></div>
+                            <div class="features-icons-icon d-flex"><i class="bi bi-search"></i></div>
                             <h3>Descubre los Secretos de tu Moto</h3>
-                            <p class="lead mb-0">¿Listo para desvelar los misterios de tu moto? En este primer paso, te llevaremos al corazón de tu vehículo. Exploraremos cada rincón y te revelaremos sus secretos mejor guardados. Prepara tu linterna, ¡comenzamos a investigar!
-                            </p>
+                            <p class="lead mb-0">¿Listo para desvelar los misterios de tu moto? En este primer paso, te llevaremos al corazón de tu vehículo. Exploraremos cada rincón y te revelaremos sus secretos mejor guardados. Prepara tu linterna, ¡comenzamos a investigar!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex"><img src="assets/img/hand.jfif"  alt="Icono de Moto">
-                            </div>
+                            <div class="features-icons-icon d-flex"><img src="assets/img/hand.jfif" alt="Icono de Moto" class="mx-auto"></div>
                             <h3>Negocia como un Profesional de Dos Ruedas</h3>
                             <p class="lead mb-0">¿Listo para negociar como un verdadero experto en motos? Nuestro equipo de expertos te dará las armas y estrategias necesarias para cerrar el mejor trato. No te conformes con menos. ¡Vamos a hacerlo!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex block"><img src="assets/img/bike.jfif"  alt="Icono de Moto"></div>
+                            <div class="features-icons-icon d-flex block"><img src="assets/img/bike.jfif" alt="Icono de Moto" class="mx-auto"></div>
                             <h3>Disfruta la Aventura sobre Dos Ruedas</h3>
                             <p class="lead mb-0">Ahora que tienes el control y la confianza, es hora de subirte y disfrutar la aventura. Conoce cada rincón de la carretera y siente la emoción de la libertad. ¡Súbete a tu moto y déjanos cuidar del resto!</p>
                         </div>
                     </div>
                 </div>
             </div>
+
         </section>
         <!-- Image Showcases-->
         <section class="showcase">
