--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex"><i class="bi bi-search"></i></div>
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 text-center">
+                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-search"></i></div>
                             <h3>Descubre los Secretos de tu Moto</h3>
                             <p class="lead mb-0">¿Listo para desvelar los misterios de tu moto? En este primer paso, te llevaremos al corazón de tu vehículo. Exploraremos cada rincón y te revelaremos sus secretos mejor guardados. Prepara tu linterna, ¡comenzamos a investigar!</p>
                         </div>
