--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <!-- Icons Grid-->
         <section class="features-icons bg-light text-center">
             <div class="container">
+                <h1 class="mb-5">Para Ti</h1>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 text-center">
@@ -120,6 +121,38 @@
             </div>
 
         </section>
+
+        <!-- Icons Grid-->
+        <section class="features-icons bg-light text-center">
+            <div class="container">
+                <h1 class="mb-5">Para Tu Negocio</h1>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 text-center">
+                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-search"></i></div>
+                            <h3>Sistema de gestión de registros</h3>
+                            <p class="lead mb-0">mantén un registro completo de cada servicio realizado con nuestra plataforma de historial de mantenimiento. Simplifica tus operaciones, aumenta la fidelidad de los clientes y brinda transparencia total en un solo lugar.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <div class="features-icons-icon d-flex"><img src="assets/img/hand.jfif" alt="Icono de Moto" class="mx-auto"></div>
+                            <h3>Mejora la eficiencia de tu taller</h3>
+                            <p class="lead mb-0">atrae a más clientes con nuestra plataforma de historial de mantenimiento. Ofrecemos una solución integral que te permite registrar, programar y comunicarte de manera efectiva con tus clientes, todo en una plataforma fácil de usar.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                            <div class="features-icons-icon d-flex block"><img src="assets/img/bike.jfif" alt="Icono de Moto" class="mx-auto"></div>
+                            <h3>Descubre una forma más inteligente de trabajar en tu taller</h3>
+                            <p class="lead mb-0">Con nuestra página de historial de mantenimiento, puedes ofrecer un servicio de calidad excepcional, mantener a tus clientes informados en tiempo real y asegurarte de que cada moto tenga un historial de mantenimiento detallado para su tranquilidad y la tuya.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- Image Showcases-->
         <section class="showcase">
             <div class="container-fluid p-0">
