--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 text-center">
-                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-search"></i></div>
+                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-clipboard-check"></i></div>
                             <h3>Sistema de gestión de registros</h3>
                             <p class="lead mb-0">mantén un registro completo de cada servicio realizado con nuestra plataforma de historial de mantenimiento. Simplifica tus operaciones, aumenta la fidelidad de los clientes y brinda transparencia total en un solo lugar.</p>
                         </div>
