--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-graph-up-arrow"></i></div>
+                            <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-graph-up"></i></div>
                             <h3>Mejora la eficiencia de tu taller</h3>
                             <p class="lead mb-0">atrae a más clientes con nuestra plataforma de historial de mantenimiento. Ofrecemos una solución integral que te permite registrar, programar y comunicarte de manera efectiva con tus clientes, todo en una plataforma fácil de usar.</p>
                         </div>
