--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-clipboard-data"></i></div>
-                            <h3>Descubre una forma más inteligente de trabajar en tu taller</h3>
-                            <p class="lead mb-0">Con nuestra página de historial de mantenimiento, puedes ofrecer un servicio de calidad excepcional, mantener a tus clientes informados en tiempo real y asegurarte de que cada moto tenga un historial de mantenimiento detallado para su tranquilidad y la tuya.</p>
+                            <h3>Construcción de reputación</h3>
+                            <p class="lead mb-0">Los talleres pueden utilizar tu plataforma para construir y mantener su reputación. Las calificaciones y comentarios positivos de los clientes pueden ayudar a fortalecer su credibilidad en el mercado.</p>
                         </div>
                     </div>
                 </div>
