--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex justify-content-center align-items-center"><i class="bi bi-clipboard-data"></i></div>
                             <h3>Construcción de reputación</h3>
-                            <p class="lead mb-0">Los talleres pueden utilizar tu plataforma para construir y mantener su reputación. Las calificaciones y comentarios positivos de los clientes pueden ayudar a fortalecer su credibilidad en el mercado.</p>
+                            <p class="lead mb-0">Construye y mantén la reputación de tu taller, mediante calificaciones y comentarios positivos de los clientes.</p>
                         </div>
                     </div>
                 </div>
